2023-10-03T00:42:00Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6387159910 # 1215
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-03
* notice: last 14d: unq all: 4 35
* notice: prev accum: outdated-unq outdated-all / unq all: 639 1007 / 662 1044
* notice: next accum: outdated-unq outdated-all / unq all: 640 1009 / 662 1044
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-09-18] / []

2023-10-02T16:11:37Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6382654500 # 1214
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-02
* notice: last 14d: unq all: 4 36
* notice: prev accum: outdated-unq outdated-all / unq all: 639 1007 / 662 1043
* notice: next accum: outdated-unq outdated-all / unq all: 639 1007 / 662 1044
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2023-10-02]

2023-10-02T08:12:24Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6377599888 # 1213
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-02
* notice: last 14d: unq all: 4 35
* notice: prev accum: outdated-unq outdated-all / unq all: 639 1007 / 661 1042
* notice: next accum: outdated-unq outdated-all / unq all: 639 1007 / 662 1043
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-09-18 2023-10-02]

2023-10-02T00:41:52Z: