@@ -4,8 +4,8 @@
   "clones": [
     {
       "timestamp": "2023-09-19T00:00:00Z",
-      "count": 3,
-      "uniques": 2
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2023-09-20T00:00:00Z",
@@ -71,6 +71,11 @@
       "timestamp": "2023-10-02T00:00:00Z",
       "count": 2,
       "uniques": 1
+    },
+    {
+      "timestamp": "2023-10-03T00:00:00Z",
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
