@@ -1,3 +1,12 @@
+2023-10-03T08:12:21Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6390372450 # 1216
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-03
+* notice: last 14d: unq all: 4 35
+* notice: prev accum: outdated-unq outdated-all / unq all: 640 1009 / 662 1044
+* notice: next accum: outdated-unq outdated-all / unq all: 640 1009 / 664 1046
+* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -1 -2 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [] / [2023-09-19 2023-10-03]
+
 2023-10-03T00:42:00Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6387159910 # 1215
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-03
